# Type-Systems

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  EXAMPLES.md  LICENSE  README.md  REQUIREMENTS_COVERAGE.md  pyproject.toml  run_all.sh
.github/workflows/: ci.yml
compare/: __init__.py  generate_report.py  neo4j_baseline.py  vector_baseline.py
core/: __init__.py  engine.py  loader.py  models.py
docs/: EXAMPLE_RESULTS.md  tax-type-system-verification.md  type-systems-legal-regulatory.md
fda_faers/: __init__.py  benchmark.py  config.yaml  download.sh  ingest.py  sample_data.py
icij_offshore/: __init__.py  benchmark.py  config.yaml  download.sh  ingest.py
research/: arcgentica_analysis.md
scotus_citations/: __init__.py  benchmark.py  config.yaml  download.sh  ingest.py  landmark_data.py
scripts/: quickstart.sh  run_examples.sh  seed_data.py  setup_typedb.py  test_e2e_flow.py  test_standalone.py
src/: config.py  logging_config.py
src/agents/: __init__.py  base.py  context_agent.py  executive_agent.py  governance_agent.py  orchestrator.py  repl.py
src/api/: main.py
src/api/middleware/: __init__.py  auth.py  rate_limit.py
src/api/routes/: entities.py  hyperedges.py  query.py
src/llm/: anthropic.py
src/models/: entities.py
src/typedb/: __init__.py  client.py  embeddings.py  inference.py  operations.py  schema.py
tests/unit/: test_agents.py  test_api.py  test_inference.py  test_logging_config.py  test_middleware.py  test_models.py
