[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypergraph-context-graph"
version = "0.1.0"
description = "Production-ready Enterprise Context Graph using Hypergraphs and TypeDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["hypergraph", "knowledge-graph", "typedb", "llm", "enterprise"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # TypeDB 3.x
    "typedb-driver>=3.0.0",
    
    # LLM Providers
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    
    # Data Processing
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # API
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    
    # Async
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    
    # Vector/Embeddings
    "numpy>=1.26.0",
    
    # Rate Limiting
    "aiolimiter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

connectors = [
    # Salesforce
    "simple-salesforce>=1.12.0",
    # Slack
    "slack-sdk>=3.33.0",
    # Snowflake
    "snowflake-connector-python>=3.12.0",
]

all = [
    "hypergraph-context-graph[dev,connectors]",
]

[project.scripts]
hcg = "src.cli:main"
hcg-api = "src.api.main:run"

[project.urls]
Homepage = "https://github.com/yourusername/hypergraph-context-graph"
Documentation = "https://github.com/yourusername/hypergraph-context-graph#readme"
Repository = "https://github.com/yourusername/hypergraph-context-graph"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
