[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-graph-benchmarks"
version = "0.1.0"
description = "Benchmarks for the Enterprise Context Graph architecture against public datasets"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
vector = ["chromadb>=0.4", "sentence-transformers>=2.0"]
all = ["context-graph-benchmarks[neo4j,vector]"]

[tool.hatch.build.targets.wheel]
packages = ["core", "icij_offshore", "scotus_citations", "fda_faers", "compare"]
